sort.basic.cocktail.AlgCocktailSort2.scala.error
Compilation error:
AlgCocktailSort2:7: error: '(' expected but '{' found.
  {
  ^AlgCocktailSort2:28: error: illegal start of simple expression
} 
^